logs/errorLogs.log
2019-05-20T08:37:22.722Z => error => ReferenceError: param is not defined
2019-05-20T08:37:38.599Z => error => ReferenceError: param is not defined
2019-05-20T08:38:01.719Z => error => Error: Product ID can not be string or null: NaN
2019-05-20T08:38:15.631Z => error => Error: Product ID can not be string or null: sdsdsd
2019-05-20T08:38:37.263Z => error => Error: Product ID can not be string or null: ___
2019-05-20T08:38:54.868Z => error => Error: Product ID must be a number: ___
2019-05-20T08:39:21.795Z => error => uncaughtException: Unexpected token }
C:\Users\User\Desktop\Node Projects\online-shop-backend\controllers\products.js:90
    }
    ^

SyntaxError: Unexpected token }
    at createScript (vm.js:80:10)
    at Object.runInThisContext (vm.js:139:10)
    at Module._compile (module.js:617:28)
    at Object.Module._extensions..js (module.js:664:10)
    at Module.load (module.js:566:32)
    at tryModuleLoad (module.js:506:12)
    at Function.Module._load (module.js:498:3)
    at Module.require (module.js:597:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (C:\Users\User\Desktop\Node Projects\online-shop-backend\routes\routes.js:5:27)
    at Module._compile (module.js:653:30)
    at Object.Module._extensions..js (module.js:664:10)
    at Module.load (module.js:566:32)
    at tryModuleLoad (module.js:506:12)
    at Function.Module._load (module.js:498:3)
    at Module.require (module.js:597:17)
2019-05-20T08:40:33.342Z => error => error: delete from "products" where "id" = $1 - invalid input syntax for integer: "NaN"
2019-05-20T08:40:54.795Z => error => error: delete from "products" where "id" = $1 - invalid input syntax for integer: "NaN"
